--- a/package.json
+++ b/package.json
@@ -10,3 +10,8 @@
     "express": "^4.18.2"
   }
 }
+"dependencies": {
+  "discord.js": "^14.14.1",
+  "express": "^4.18.2",
+  "dotenv": "^16.3.1"
+}
