--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "patroclo-bot",
+  "name": "patroclo-b",
   "version": "1.0.0",
-  "description": "Mini GPT experimental",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^14.13.0"
+    "discord.js": "^14.14.1",
+    "node-fetch": "^3.3.2",
+    "dotenv": "^16.3.1"
   }
 }
