Actualizar package.json

--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "patroclo-b",
+  "name": "patroclo-bot",
   "version": "1.0.0",
-  "type": "module",
+  "description": "Mini GPT experimental",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^14.14.1",
-    "node-fetch": "^3.3.2",
-    "dotenv": "^16.3.1"
+    "discord.js": "^14.13.0"
   }
 }
