--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "patroclo-bot",
-  "version": "1.0.0",
+  "name": "patroclo-b",
+  "version": "17.5.0",
   "type": "module",
   "main": "index.js",
   "scripts": {
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "discord.js": "^14.14.1",
-    "dotenv": "^16.4.1"
+    "dotenv": "^16.4.1",
+    "mongoose": "^8.1.1"
   }
 }
