--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "patroclo-b-b01",
+  "name": "patroclo-b-01-8",
   "version": "1.0.0",
-  "description": "Bot Patroclo-B Fase B01 - Full ADN y Universe",
+  "description": "Bot Galáctico B01.8 con ADN y Economía",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -10,10 +10,7 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "mongodb": "^6.3.0",
-    "dotenv": "^16.3.1",
-    "axios": "^1.6.0"
-  },
-  "engines": {
-    "node": ">=18.x"
+    "axios": "^1.6.5",
+    "dotenv": "^16.3.1"
   }
 }
